--- a/TODO.txt
+++ b/TODO.txt
@@ -12,5 +12,6 @@ Mouse interaction
 	Make sure foragers can be clicked
 Muck event dispatch
 	Make a signal.js
+Inspect performance
 splash screen
 music
