--- a/TODO.txt
+++ b/TODO.txt
@@ -4,6 +4,11 @@ Feeder clusters aren't positioning properly
 Tweening
 	alga (+muck)
 	forager
+Sizing of game
+	aspect ratio 4 / 3
+	width no greater than 90vw
+	height no greater than 90vh
+Portrait orientation should swap width and height
 Make sure foragers can be clicked
 Muck event dispatch
 	Make a signal.js
