--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,4 @@
-z-ordering (namely each forager over all algae)
+smin for metaball sums
 Sizing of game
 	aspect ratio 4 / 3
 	width no greater than 90vw
