Subclassed SceneNode to SceneNode2D; renamed Transform to Transform2D; move the global position/rotation getter-setters to SceneNode2D; isolated the render function and renamed it to render2D.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,6 @@
+Replace chain with something nicer
+	What does tensorflow use?
+		Does it generate a function?
 music
 Inspect performance further
 	Do breathing tweens leak memory?
