Minor performance improvements before digging into more serious stuff.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,9 @@
 Inspect performance
+
+	recompose is probably called too often
+		Also, no internal function should get and then set position on a transform
+	localToGlobalMatrix could be cached
+
 	How well does the vec lib perform?
 		Any bottlenecks?
 	Do breathing tweens leak memory?
