Web audio modulation now works. Audio JSON is tuned to sound like emulated Beatnik notes.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,12 +1,6 @@
 Replace chain with something nicer
 	What does tensorflow use?
 		Does it generate a function?
-audio
-	Create audio system with web audio API
-		Look at existing synthesizer implementations
-	Tune audio instruments to match music box
-	debounce?
-	pan audio based on global position
 Decompilation insights
 	Forager agitation
 		"checkAgitation"
@@ -15,9 +9,12 @@ Decompilation insights
 		Also, what about the other cast members?
 Make sure game DOM is truly self contained
 	Metaball canvas got bumped by adding an absolute positioned element below the game tag
+	The whole thing is actually pretty fragile
+	itch.io just puts it in an iframe, that's probably the way to go
 Feeders that can't combine should probably repel one another a bit
 	Otherwise they wind up overlapping
 Inspect performance further
 	Do breathing tweens leak memory?
 smin for metaball sums
 Portrait orientation should swap width and height
+pan audio based on global position
