--- a/TODO.txt
+++ b/TODO.txt
@@ -6,18 +6,14 @@ Inspect performance
 		Any bottlenecks?
 	Do breathing tweens leak memory?
 Cache local-to-global matrix
-Decompilation insights
-	Forager agitation
-		"checkAgitation"
-	Check timings and conditions of things
-	Look around for other goodies
-		Also, what about the other cast members?
+Apply changes from decompilation insights
 Make sure game DOM is truly self contained
 	Metaball canvas got bumped by adding an absolute positioned element below the game tag
 	The whole thing is actually pretty fragile
 	itch.io just puts it in an iframe, that's probably the way to go
 Feeders that can't combine should probably repel one another a bit
 	Otherwise they wind up overlapping
+	This includes all feeders at the beginning of the game
 smin for metaball sums
 Portrait orientation should swap width and height
 pan audio based on global position
