Transform2Ds can now report when they become stale. SceneNode2Ds can now become stale, either due to reparenting or having their transform change. Concatenated transforms only recompose if the SceneNode2D is stale.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,6 @@
-global matrix recomposition
-	Only do this when absolutely necessary
-
+Pool vecs
+	vec lifecycle
+		Vecs created by vec operations form chains that can be collectively pooled afterwards
 Inspect performance
 	How well does the vec lib perform?
 		Any bottlenecks?
