Audio now echoes, pans, and gains based on the passed-in "spatial audio" parameters. The audio timeout has been stretched to twice the duration of a sound, to accommodate echoes and reduce the chance of terminating audio too early. Sound envelopes are now fully data-driven— they aren't forced to fade out in the audio module.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,4 @@
-Audio
-	pan based on global position
-	debounce and/or quiet
+Audio debounce
+metaballs smin
 
-Generalization
-	Move general stuff into lib folder for reuse in other projects
+Move general stuff into lib folder for reuse in other projects
