--- a/TODO.txt
+++ b/TODO.txt
@@ -1,2 +1,7 @@
+Reparenting bug
+When resetting, foragers are placed on new algae, but their old views aren't updated until they jump
+
+
+Multiple touch points
 Move most logic from alga/feeder/forager into game-*
 Move general stuff into lib folder for reuse in other projects
